--- a/symphony/assets/css/src/symphony.less
+++ b/symphony/assets/css/src/symphony.less
@@ -251,7 +251,7 @@ label.inline-help > i {
 }
 
 .help {
-	clear: both; color: @dark-grey; font-size: @text-shorter; font-weight: 300; line-height: 1.4em; margin-top: @spacing-smallest!important;
+	clear: both; color: @dark-grey; font-size: @text-shorter; font-weight: 300; line-height: 1.4em;
 }
 
 .centered {
